--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,3 @@
 [laptop]
-your_laptop_hostname ansible_host=your_laptop_ip ansible_user=your_user ansible_ssh_private_key_file=~/.ssh/id_rsa
+localhost ansible_connection=local
+# your_laptop_hostname ansible_host=your_laptop_ip ansible_user=your_user ansible_ssh_private_key_file=~/.ssh/id_rsa
