--- a/roles/apt_packages/vars/main.yaml
+++ b/roles/apt_packages/vars/main.yaml
@@ -21,6 +21,16 @@ apt_packages:
   - autojump # https://github.com/wting/autojump
   - fzf # https://github.com/junegunn/fzf
   - zoxide # https://github.com/ajeetdsouza/zoxide
+  - bat # https://github.com/sharkdp/bat
+  - ncdu # https://code.blicky.net/yorhel/ncdu / https://dev.yorhel.nl/ncdu
+  - nmap # https://nmap.org/
+  - trash-cli # https://github.com/andreafrancia/trash-cli
+
+#
+# copy/paste
+#
+    - xclip
+    - xsel
 
 custom_apt_repositories:
   - repo: "ppa:fish-shell/release-3" # https://github.com/fish-shell/fish-shell
