--- a/roles/snap_packages/vars/main.yaml
+++ b/roles/snap_packages/vars/main.yaml
@@ -1,5 +1,6 @@
 ---
 snap_packages:
-  - code  # VS Code
-  - spotify
-  - ...  # Your list of snap packages
+#  - code  # VS Code
+#  - spotify
+  - jqp # tui https://github.com/noahgorstein/jqp
+  # - ...  # Your list of snap packages
