--- a/roles/custom_installs/tasks/main.yaml
+++ b/roles/custom_installs/tasks/main.yaml
@@ -1,4 +1,25 @@
 ---
+
+#
+# oh-my-zsh
+#
+
+- name: Check if Oh My Zsh is installed
+  stat:
+    path: "{{ ansible_env.HOME }}/.oh-my-zsh"
+  register: ohmyzsh_installed
+
+- name: Install Oh My Zsh
+  shell: "sh -c \"$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)\""
+  args:
+    creates: "{{ ansible_env.HOME }}/.oh-my-zsh"  # Alternative idempotency check
+  when: not ohmyzsh_installed.stat.exists
+
+
+#
+# sdkman
+#
+
 - name: Check if SDKMAN is installed
   stat:
     path: "{{ ansible_env.HOME }}/.sdkman/bin/sdkman-init.sh"
@@ -14,14 +35,3 @@
     executable: /bin/bash
   when: not sdkman_installed.stat.exists
 
----
-- name: Check if Oh My Zsh is installed
-  stat:
-    path: "{{ ansible_env.HOME }}/.oh-my-zsh"
-  register: ohmyzsh_installed
-
-- name: Install Oh My Zsh
-  shell: "sh -c \"$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)\""
-  args:
-    creates: "{{ ansible_env.HOME }}/.oh-my-zsh"  # Alternative idempotency check
-  when: not ohmyzsh_installed.stat.exists
