--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: laptop
   become: true  # Use sudo for tasks that require it
-  become_method: sudo
+  # become_method: sudo
   roles:
     - common
     - apt_packages
