--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: laptop
-  become: true  # Use sudo for tasks that require it
+  # become: true  # Use sudo for tasks that require it
   # become_method: sudo
   roles:
     - common
