--- a/playbook.yml
+++ b/playbook.yml
@@ -1,10 +1,12 @@
 ---
 - hosts: laptop
-  # become: true  # Use sudo for tasks that require it
-  # become_method: sudo
+   become: true  # Use sudo for tasks that require it
+   become_method: sudo
   roles:
     - common
-    - apt_packages
+- hosts: laptop
+  roles:
+   - apt_packages
     - snap_packages
     - flatpak_packages
     - custom_installs
