--- a/roles/apt_packages/vars/main.yaml
+++ b/roles/apt_packages/vars/main.yaml
@@ -1,10 +1,7 @@
 ---
 apt_packages:
-#  - vlc
-#  - chromium-browser
-  - neovim # https://github.com/neovim/neovim / https://github.com/nvim-lua/kickstart.nvim
-
-#  - ...  # Your list of default apt packages
+  - vlc
+  - chromium-browser
 
 #
 # shell(s)
@@ -18,32 +15,33 @@ apt_packages:
 # cli/tui sys tools
 #
 
-  - fd-find # https://github.com/sharkdp/fd
-  - ripgrep # https://github.com/BurntSushi/ripgrep
-  - autojump # https://github.com/wting/autojump
-  - fzf # https://github.com/junegunn/fzf
-  - zoxide # https://github.com/ajeetdsouza/zoxide
-  - bat # https://github.com/sharkdp/bat
-  - ncdu # https://code.blicky.net/yorhel/ncdu / https://dev.yorhel.nl/ncdu
-  - nmap # https://nmap.org/
-  - trash-cli # https://github.com/andreafrancia/trash-cli
+#  - fd-find # https://github.com/sharkdp/fd
+#  - ripgrep # https://github.com/BurntSushi/ripgrep
+#  - autojump # https://github.com/wting/autojump
+#  - fzf # https://github.com/junegunn/fzf
+#  - zoxide # https://github.com/ajeetdsouza/zoxide
+#  - bat # https://github.com/sharkdp/bat
+#  - ncdu # https://code.blicky.net/yorhel/ncdu / https://dev.yorhel.nl/ncdu
+#  - nmap # https://nmap.org/
+#  - trash-cli # https://github.com/andreafrancia/trash-cli
 
 #
 # copy/paste
 #
-  - xclip # todo add link
-  - xsel # todo add link
 
-  - unrar # https://github.com/pmachapman/unrar
-  - hexyl # tui https://github.com/sharkdp/hexyl
-  - rclone # https://github.com/rclone/rclone
-  - age # https://github.com/FiloSottile/age
+#  - xclip # todo add link
+#  - xsel # todo add link
+
+#  - unrar # https://github.com/pmachapman/unrar
+#  - hexyl # tui https://github.com/sharkdp/hexyl
+#  - rclone # https://github.com/rclone/rclone
+#  - age # https://github.com/FiloSottile/age
 
 #
 # dev tools
 #
 
-  - jq # https://github.com/jqlang/jq
+# - jq # https://github.com/jqlang/jq
 
 custom_apt_repositories:
   - repo: "ppa:fish-shell/release-3" # https://github.com/fish-shell/fish-shell
