--- a/roles/apt_sudo_packages/tasks/main.yaml
+++ b/roles/apt_sudo_packages/tasks/main.yaml
@@ -1,18 +1,18 @@
 ---
-- name: Add custom APT repositories
-  ansible.builtin.apt_repository:
-    repo: "{{ item.repo }}"
-    state: present
-    update_cache: yes
-  loop: "{{ custom_apt_repositories }}"
-  when: item.state == "present"
-
-- name: Remove custom APT repositories
-  ansible.builtin.apt_repository:
-    repo: "{{ item.repo }}"
-    state: absent
-  loop: "{{ custom_apt_repositories }}"
-  when: item.state == "absent"
+#- name: Add custom APT repositories
+#  ansible.builtin.apt_repository:
+#    repo: "{{ item.repo }}"
+#    state: present
+#    update_cache: yes
+#  loop: "{{ custom_apt_repositories }}"
+#  when: item.state == "present"
+#
+#- name: Remove custom APT repositories
+#  ansible.builtin.apt_repository:
+#    repo: "{{ item.repo }}"
+#    state: absent
+#  loop: "{{ custom_apt_repositories }}"
+#  when: item.state == "absent"
 
 - name: Install APT packages
   ansible.builtin.apt:
