--- a/roles/apt_packages/vars/main.yaml
+++ b/roles/apt_packages/vars/main.yaml
@@ -1,14 +1,13 @@
 ---
 apt_packages:
   - vlc
-  - chromium-browser
 
 #
 # shell(s)
 #
 
-#  - zsh
-#  - fish # https://github.com/fish-shell/fish-shell
+  - zsh
+  - fish # https://github.com/fish-shell/fish-shell
 
 #  - nushell # probably custom install via rust
 
