--- a/roles/apt_packages/vars/main.yaml
+++ b/roles/apt_packages/vars/main.yaml
@@ -7,7 +7,7 @@ apt_packages:
 #
 
   - zsh
-  - fish # https://github.com/fish-shell/fish-shell
+#  - fish # https://github.com/fish-shell/fish-shell
 
 #  - nushell # probably custom install via rust
 
