--- a/roles/custom_installs/tasks/main.yaml
+++ b/roles/custom_installs/tasks/main.yaml
@@ -23,7 +23,7 @@
   register: starship_installed
 
 - name: Install Starship
-  shell: "curl -sS https://starship.rs/install.sh -- yes | sh"
+  shell: "curl -sS https://starship.rs/install.sh | sh -s --yes"
   #  args:
   #    creates: "{{ ansible_env.HOME }}/.local/bin/starship"  # Alternative idempotency check
   when: not starship_installed.stat.exists
