--- a/roles/custom_sudo_installs/tasks/main.yaml
+++ b/roles/custom_sudo_installs/tasks/main.yaml
@@ -27,3 +27,36 @@
 - name: Display ytt version
   ansible.builtin.debug:
     var: ytt_version.stdout
+
+#
+# wezterm https://wezfurlong.org/wezterm/install/linux.html
+#
+
+- name: Create apt keyrings directory if it doesn't exist
+  file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: 0755
+
+- name: Download WezTerm GPG key
+  shell: "curl -fsSL https://apt.fury.io/wez/gpg.key | sudo gpg --yes --dearmor -o /etc/apt/keyrings/wezterm-fury.gpg"
+  args:
+    creates: /etc/apt/keyrings/wezterm-fury.gpg
+  become: true
+
+- name: Add WezTerm apt repository
+  shell: "echo 'deb [signed-by=/etc/apt/keyrings/wezterm-fury.gpg] https://apt.fury.io/wez/ * *' | sudo tee /etc/apt/sources.list.d/wezterm.list"
+  args:
+    creates: /etc/apt/sources.list.d/wezterm.list
+  become: true
+
+- name: Update apt cache
+  apt:
+    update_cache: yes
+  become: true
+
+- name: Install WezTerm
+  apt:
+    name: wezterm
+    state: present
+  become: true
